--- a/index.qmd
+++ b/index.qmd
@@ -1,15 +1,18 @@
 ---
-title: "Liripo Blog"
+title: "Blog"
 listing:
-  contents: posts
-  sort: "date desc"
-  type: default
-  categories: true
-  sort-ui: true
-  filter-ui: true
-  feed: true
+  - id: posts
+    contents: posts/**/*/index.qmd
+    type: grid
+    fields: [image, date, title, subtitle, categories, author, reading-time]  
+    sort: "date desc"
+    categories: true
+    sort-ui: true
+    filter-ui: true
+    page-size: 3
+
 page-layout: full
-title-block-banner: true
+title-block-banner: false
 ---
 
 
