--- a/index.qmd
+++ b/index.qmd
@@ -3,13 +3,12 @@ title: "Blog"
 listing:
   - id: posts
     contents: posts/**/*/index.qmd
-    type: grid
+    # type: grid
     fields: [image, date, title, subtitle, categories, author, reading-time]  
     sort: "date desc"
     categories: true
     sort-ui: true
     filter-ui: true
-    page-size: 3
 
 page-layout: full
 title-block-banner: false
