--- a/posts/gunicorn_dash/index.qmd
+++ b/posts/gunicorn_dash/index.qmd
@@ -2,7 +2,7 @@
 title: "gunicorn 部署 dash 生产环境"
 author: "Liripo"
 date: "2024-06-15"
-categories: [dash,gunicorn]
+categories: [dash,web]
 image: "dash.jpg"
 ---
 
