--- a/index.qmd
+++ b/index.qmd
@@ -9,6 +9,7 @@ listing:
     categories: true
     sort-ui: true
     filter-ui: true
+    feed: true
 
 page-layout: full
 title-block-banner: false
